Prevent sidebar flicker

--- a/docs/css/components/_navigation.scss
+++ b/docs/css/components/_navigation.scss
@@ -54,7 +54,6 @@
 
     &.active {
       .nav-item {
-        color: var(--primary);
         font-weight: 600;
 
         + .expand-more {
